pkg/parser/antlr_parser.go
// Code generated from antlr.g4 by ANTLR 4.8. DO NOT EDIT.

package parser // antlr

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "':'", "'bool'", "'bytes'", "'double'", "'enum'", "'fixed32'", "'fixed64'",
	"'float'", "'import'", "'int32'", "'int64'", "'map'", "'message'", "'oneof'",
	"'option'", "'package'", "'\"proto3\"'", "''proto3''", "'public'", "'repeated'",
	"'reserved'", "'returns'", "'rpc'", "'service'", "'sfixed32'", "'sfixed64'",
	"'sint32'", "'sint64'", "'stream'", "'string'", "'syntax'", "'to'", "'uint32'",
	"'uint64'", "'weak'", "'('", "')'", "'{'", "'}'", "'['", "']'", "'<'",
	"'>'", "';'", "','", "'.'", "'-'", "'+'", "'\\'", "'='",
}
var symbolicNames = []string{
	"", "", "BOOL", "BYTES", "DOUBLE", "ENUM", "FIXED32", "FIXED64", "FLOAT",
	"IMPORT", "INT32", "INT64", "MAP", "MESSAGE", "ONEOF", "OPTION", "PACKAGE",
	"PROTO3_DOUBLE", "PROTO3_SINGLE", "PUBLIC", "REPEATED", "RESERVED", "RETURNS",
	"RPC", "SERVICE", "SFIXED32", "SFIXED64", "SINT32", "SINT64", "STREAM",
	"STRING", "SYNTAX", "TO", "UINT32", "UINT64", "WEAK", "LPAREN", "RPAREN",
	"LBRACE", "RBRACE", "LBRACK", "RBRACK", "LCHEVR", "RCHEVR", "SEMI", "COMMA",
	"DOT", "MINUS", "PLUS", "SLASH", "EQ", "Ident", "IntLit", "FloatLit", "BoolLit",
	"StrLit", "WS", "COMMENT", "LINE_COMMENT",
}

var ruleNames = []string{
	"proto", "syntax", "imports", "packageName", "option", "optionName", "optionDecl",
	"optionDeclVar", "message", "messageDecl", "enum", "enumDecl", "enumField",
	"keyValue", "service", "rpcName", "rpcParams", "clientStreams", "rpcReturns",
	"serverStreams", "rpc", "reserved", "ranges", "rangeDef", "fieldNames",
	"fieldType", "field", "fieldOpts", "oneof", "oneofField", "mapField", "keyType",
	"reservedWord", "fullIdent", "messageOrEnumType", "constant",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type antlrParser struct {
	*antlr.BaseParser
}

func NewantlrParser(input antlr.TokenStream) *antlrParser {
	this := new(antlrParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "antlr.g4"

	return this
}

// antlrParser tokens.
const (
	antlrParserEOF           = antlr.TokenEOF
	antlrParserT__0          = 1
	antlrParserBOOL          = 2
	antlrParserBYTES         = 3
	antlrParserDOUBLE        = 4
	antlrParserENUM          = 5
	antlrParserFIXED32       = 6
	antlrParserFIXED64       = 7
	antlrParserFLOAT         = 8
	antlrParserIMPORT        = 9
	antlrParserINT32         = 10
	antlrParserINT64         = 11
	antlrParserMAP           = 12
	antlrParserMESSAGE       = 13
	antlrParserONEOF         = 14
	antlrParserOPTION        = 15
	antlrParserPACKAGE       = 16
	antlrParserPROTO3_DOUBLE = 17
	antlrParserPROTO3_SINGLE = 18
	antlrParserPUBLIC        = 19
	antlrParserREPEATED      = 20
	antlrParserRESERVED      = 21
	antlrParserRETURNS       = 22
	antlrParserRPC           = 23
	antlrParserSERVICE       = 24
	antlrParserSFIXED32      = 25
	antlrParserSFIXED64      = 26
	antlrParserSINT32        = 27
	antlrParserSINT64        = 28
	antlrParserSTREAM        = 29
	antlrParserSTRING        = 30
	antlrParserSYNTAX        = 31
	antlrParserTO            = 32
	antlrParserUINT32        = 33
	antlrParserUINT64        = 34
	antlrParserWEAK          = 35
	antlrParserLPAREN        = 36
	antlrParserRPAREN        = 37
	antlrParserLBRACE        = 38
	antlrParserRBRACE        = 39
	antlrParserLBRACK        = 40
	antlrParserRBRACK        = 41
	antlrParserLCHEVR        = 42
	antlrParserRCHEVR        = 43
	antlrParserSEMI          = 44
	antlrParserCOMMA         = 45
	antlrParserDOT           = 46
	antlrParserMINUS         = 47
	antlrParserPLUS          = 48
	antlrParserSLASH         = 49
	antlrParserEQ            = 50
	antlrParserIdent         = 51
	antlrParserIntLit        = 52
	antlrParserFloatLit      = 53
	antlrParserBoolLit       = 54
	antlrParserStrLit        = 55
	antlrParserWS            = 56
	antlrParserCOMMENT       = 57
	antlrParserLINE_COMMENT  = 58
)

// antlrParser rules.
const (
	antlrParserRULE_proto             = 0
	antlrParserRULE_syntax            = 1
	antlrParserRULE_imports           = 2
	antlrParserRULE_packageName       = 3
	antlrParserRULE_option            = 4
	antlrParserRULE_optionName        = 5
	antlrParserRULE_optionDecl        = 6
	antlrParserRULE_optionDeclVar     = 7
	antlrParserRULE_message           = 8
	antlrParserRULE_messageDecl       = 9
	antlrParserRULE_enum              = 10
	antlrParserRULE_enumDecl          = 11
	antlrParserRULE_enumField         = 12
	antlrParserRULE_keyValue          = 13
	antlrParserRULE_service           = 14
	antlrParserRULE_rpcName           = 15
	antlrParserRULE_rpcParams         = 16
	antlrParserRULE_clientStreams     = 17
	antlrParserRULE_rpcReturns        = 18
	antlrParserRULE_serverStreams     = 19
	antlrParserRULE_rpc               = 20
	antlrParserRULE_reserved          = 21
	antlrParserRULE_ranges            = 22
	antlrParserRULE_rangeDef          = 23
	antlrParserRULE_fieldNames        = 24
	antlrParserRULE_fieldType         = 25
	antlrParserRULE_field             = 26
	antlrParserRULE_fieldOpts         = 27
	antlrParserRULE_oneof             = 28
	antlrParserRULE_oneofField        = 29
	antlrParserRULE_mapField          = 30
	antlrParserRULE_keyType           = 31
	antlrParserRULE_reservedWord      = 32
	antlrParserRULE_fullIdent         = 33
	antlrParserRULE_messageOrEnumType = 34
	antlrParserRULE_constant          = 35
)

// IProtoContext is an interface to support dynamic dispatch.
type IProtoContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProtoContext differentiates from other interfaces.
	IsProtoContext()
}

type ProtoContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProtoContext() *ProtoContext {
	var p = new(ProtoContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = antlrParserRULE_proto
	return p
}

func (*ProtoContext) IsProtoContext() {}

func NewProtoContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProtoContext {
	var p = new(ProtoContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = antlrParserRULE_proto

	return p
}

func (s *ProtoContext) GetParser() antlr.Parser { return s.parser }

func (s *ProtoContext) Syntax() ISyntaxContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISyntaxContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISyntaxContext)
}

func (s *ProtoContext) EOF() antlr.TerminalNode {
	return s.GetToken(antlrParserEOF, 0)
}

func (s *ProtoContext) AllImports() []IImportsContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IImportsContext)(nil)).Elem())
	var tst = make([]IImportsContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IImportsContext)
		}
	}

	return tst
}

func (s *ProtoContext) Imports(i int) IImportsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IImportsContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IImportsContext)
}

func (s *ProtoContext) AllPackageName() []IPackageNameContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IPackageNameContext)(nil)).Elem())
	var tst = make([]IPackageNameContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IPackageNameContext)
		}
	}

	return tst
}

func (s *ProtoContext) PackageName(i int) IPackageNameContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IPackageNameContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IPackageNameContext)
}

func (s *ProtoContext) AllOption() []IOptionContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IOptionContext)(nil)).Elem())
	var tst = make([]IOptionContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IOptionContext)
		}
	}

	return tst
}

func (s *ProtoContext) Option(i int) IOptionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IOptionContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IOptionContext)
}

func (s *ProtoContext) AllMessage() []IMessageContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IMessageContext)(nil)).Elem())
	var tst = make([]IMessageContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IMessageContext)
		}
	}

	return tst
}

func (s *ProtoContext) Message(i int) IMessageContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMessageContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IMessageContext)
}

func (s *ProtoContext) AllEnum() []IEnumContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IEnumContext)(nil)).Elem())
	var tst = make([]IEnumContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IEnumContext)
		}
	}

	return tst
}

func (s *ProtoContext) Enum(i int) IEnumContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IEnumContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IEnumContext)
}

func (s *ProtoContext) AllService() []IServiceContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IServiceContext)(nil)).Elem())
	var tst = make([]IServiceContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IServiceContext)
		}
	}

	return tst
}

func (s *ProtoContext) Service(i int) IServiceContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IServiceContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IServiceContext)
}

func (s *ProtoContext) AllSEMI() []antlr.TerminalNode {
	return s.GetTokens(antlrParserSEMI)
}

func (s *ProtoContext) SEMI(i int) antlr.TerminalNode {
	return s.GetToken(antlrParserSEMI, i)
}

func (s *ProtoContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProtoContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProtoContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(antlrListener); ok {
		listenerT.EnterProto(s)
	}
}

func (s *ProtoContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(antlrListener); ok {
		listenerT.ExitProto(s)
	}
}

func (p *antlrParser) Proto() (localctx IProtoContext) {
	localctx = NewProtoContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, antlrParserRULE_proto)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(72)
		p.Syntax()
	}
	p.SetState(82)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for (((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<antlrParserENUM)|(1<<antlrParserIMPORT)|(1<<antlrParserMESSAGE)|(1<<antlrParserOPTION)|(1<<antlrParserPACKAGE)|(1<<antlrParserSERVICE))) != 0) || _la == antlrParserSEMI {
		p.SetState(80)
		p.GetErrorHandler().Sync(p)

		switch p.GetTokenStream().LA(1) {
		case antlrParserIMPORT:
			{
				p.SetState(73)
				p.Imports()
			}

		case antlrParserPACKAGE:
			{
				p.SetState(74)
				p.PackageName()
			}

		case antlrParserOPTION:
			{
				p.SetState(75)
				p.Option()
			}

		case antlrParserMESSAGE:
			{
				p.SetState(76)
				p.Message()
			}

		case antlrParserENUM:
			{
				p.SetState(77)
				p.Enum()
			}

		case antlrParserSERVICE:
			{
				p.SetState(78)
				p.Service()
			}

		case antlrParserSEMI:
			{
				p.SetState(79)
				p.Match(antlrParserSEMI)
			}

		default:
			panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		}

		p.SetState(84)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(85)
		p.Match(antlrParserEOF)
	}

	return localctx
}

// ISyntaxContext is an interface to support dynamic dispatch.
type ISyntaxContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSyntaxContext differentiates from other interfaces.
	IsSyntaxContext()
}

type SyntaxContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySyntaxContext() *SyntaxContext {
	var p = new(SyntaxContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = antlrParserRULE_syntax
	return p
}

func (*SyntaxContext) IsSyntaxContext() {}

func NewSyntaxContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SyntaxContext {
	var p = new(SyntaxContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = antlrParserRULE_syntax

	return p
}

func (s *SyntaxContext) GetParser() antlr.Parser { return s.parser }

func (s *SyntaxContext) SYNTAX() antlr.TerminalNode {
	return s.GetToken(antlrParserSYNTAX, 0)
}

func (s *SyntaxContext) EQ() antlr.TerminalNode {
	return s.GetToken(antlrParserEQ, 0)
}

func (s *SyntaxContext) SEMI() antlr.TerminalNode {
	return s.GetToken(antlrParserSEMI, 0)
}

func (s *SyntaxContext) PROTO3_DOUBLE() antlr.TerminalNode {
	return s.GetToken(antlrParserPROTO3_DOUBLE, 0)
}

func (s *SyntaxContext) PROTO3_SINGLE() antlr.TerminalNode {
	return s.GetToken(antlrParserPROTO3_SINGLE, 0)
}

func (s *SyntaxContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SyntaxContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SyntaxContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(antlrListener); ok {
		listenerT.EnterSyntax(s)
	}
}

func (s *SyntaxContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(antlrListener); ok {
		listenerT.ExitSyntax(s)
	}
}

func (p *antlrParser) Syntax() (localctx ISyntaxContext) {
	localctx = NewSyntaxContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, antlrParserRULE_syntax)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(87)
		p.Match(antlrParserSYNTAX)
	}
	{
		p.SetState(88)
		p.Match(antlrParserEQ)
	}
	{
		p.SetState(89)
		_la = p.GetTokenStream().LA(1)

		if !(_la == antlrParserPROTO3_DOUBLE || _la == antlrParserPROTO3_SINGLE) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}
	{
		p.SetState(90)
		p.Match(antlrParserSEMI)
	}

	return localctx
}

// IImportsContext is an interface to support dynamic dispatch.
type IImportsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsImportsContext differentiates from other interfaces.
	IsImportsContext()
}

type ImportsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyImportsContext() *ImportsContext {
	var p = new(ImportsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = antlrParserRULE_imports
	return p
}

func (*ImportsContext) IsImportsContext() {}

func NewImportsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ImportsContext {
	var p = new(ImportsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = antlrParserRULE_imports

	return p
}

func (s *ImportsContext) GetParser() antlr.Parser { return s.parser }

func (s *ImportsContext) IMPORT() antlr.TerminalNode {
	return s.GetToken(antlrParserIMPORT, 0)
}

func (s *ImportsContext) StrLit() antlr.TerminalNode {
	return s.GetToken(antlrParserStrLit, 0)
}

func (s *ImportsContext) SEMI() antlr.TerminalNode {
	return s.GetToken(antlrParserSEMI, 0)
}

func (s *ImportsContext) WEAK() antlr.TerminalNode {
	return s.GetToken(antlrParserWEAK, 0)
}

func (s *ImportsContext) PUBLIC() antlr.TerminalNode {
	return s.GetToken(antlrParserPUBLIC, 0)
}

func (s *ImportsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ImportsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ImportsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(antlrListener); ok {
		listenerT.EnterImports(s)
	}
}

func (s *ImportsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(antlrListener); ok {
		listenerT.ExitImports(s)
	}
}

func (p *antlrParser) Imports() (localctx IImportsContext) {
	localctx = NewImportsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, antlrParserRULE_imports)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(92)
		p.Match(antlrParserIMPORT)
	}
	p.SetState(94)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == antlrParserPUBLIC || _la == antlrParserWEAK {
		{
			p.SetState(93)
			_la = p.GetTokenStream().LA(1)

			if !(_la == antlrParserPUBLIC || _la == antlrParserWEAK) {
				p.GetErrorHandler().RecoverInline(p)
			} else {
				p.GetErrorHandler().ReportMatch(p)
				p.Consume()
			}
		}

	}
	{
		p.SetState(96)
		p.Match(antlrParserStrLit)
	}
	{
		p.SetState(97)
		p.Match(antlrParserSEMI)
	}

	return localctx
}

// IPackageNameContext is an interface to support dynamic dispatch.
type IPackageNameContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsPackageNameContext differentiates from other interfaces.
	IsPackageNameContext()
}

type PackageNameContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPackageNameContext() *PackageNameContext {
	var p = new(PackageNameContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = antlrParserRULE_packageName
	return p
}

func (*PackageNameContext) IsPackageNameContext() {}

func NewPackageNameContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PackageNameContext {
	var p = new(PackageNameContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = antlrParserRULE_packageName

	return p
}

func (s *PackageNameContext) GetParser() antlr.Parser { return s.parser }

func (s *PackageNameContext) PACKAGE() antlr.TerminalNode {
	return s.GetToken(antlrParserPACKAGE, 0)
}

func (s *PackageNameContext) FullIdent() IFullIdentContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFullIdentContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFullIdentContext)
}

func (s *PackageNameContext) SEMI() antlr.TerminalNode {
	return s.GetToken(antlrParserSEMI, 0)
}

func (s *PackageNameContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PackageNameContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PackageNameContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(antlrListener); ok {
		listenerT.EnterPackageName(s)
	}
}

func (s *PackageNameContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(antlrListener); ok {
		listenerT.ExitPackageName(s)
	}
}

func (p *antlrParser) PackageName() (localctx IPackageNameContext) {
	localctx = NewPackageNameContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, antlrParserRULE_packageName)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(99)
		p.Match(antlrParserPACKAGE)
	}
	{
		p.SetState(100)
		p.FullIdent()
	}
	{
		p.SetState(101)
		p.Match(antlrParserSEMI)
	}

	return localctx
}

// IOptionContext is an interface to support dynamic dispatch.
type IOptionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsOptionContext differentiates from other interfaces.
	IsOptionContext()
}

type OptionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyOptionContext() *OptionContext {
	var p = new(OptionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = antlrParserRULE_option
	return p
}

func (*OptionContext) IsOptionContext() {}

func NewOptionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *OptionContext {
	var p = new(OptionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = antlrParserRULE_option

	return p
}
